[package]
name = "windup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
playdate-sys = { path = "playdate-sys" }
static_assertions = "1"

[build-dependencies]
cc = "1"

[features]
# One day this can be not the default, once there is a binary choosing features.
default = ["simulator"]
simulator = ["playdate-sys/simulator"]