[package]
authors = ["Adrienne Walker <enne@quisquo.us>", "Dana Jansens <danakj@orodu.net>"]
description = "Build script helpers for the craydate crate."
documentation = "https://docs.rs/???"
edition = "2021"
homepage = "https://github.com/danakj/???"
license = "MIT/Apache-2.0"
name = "craydate-build"
repository = "https://github.com/danakj/???"
version = "0.1.0"
