[package]
authors = ["Adrienne Walker <enne@quisquo.us>", "Dana Jansens <danakj@orodu.net>"]
description = "Build script helpers for the craydate crate."
documentation = "https://docs.rs/craydate-build"
edition = "2021"
homepage = "https://github.com/danakj/craydate"
license = "MIT/Apache-2.0"
name = "craydate-build"
repository = "https://github.com/danakj/craydate"
version = "0.1.2"
