[package]
name = "YOUR GAME"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
game = {package = "YOUR_GAME", path = "../YOUR_GAME/YOUR_GAME"}
game-assets = {package = "YOUR_GAME-assets", path = "../YOUR_GAME/YOUR_GAME-assets", optional = true}
craydate = "0.1"
craydate-build = {version = "0.1", optional = true}

[build-dependencies]
craydate-build = "0.1"

[[bin]]
name = "make_pdx"
[[bin]]
name = "run_simulator"

[features]
bins = ["craydate-build", "game-assets"]

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"
