[package]
authors = ["Adrienne Walker <enne@quisquo.us>", "Dana Jansens <danakj@orodu.net>"]
description = "A safe Rust API for the Playdate hand held gaming system."
documentation = "https://docs.rs/???"
edition = "2021"
homepage = "https://github.com/danakj/???"
license = "MIT/Apache-2.0"
name = "craydate"
repository = "https://github.com/danakj/???"
version = "0.1.0"

[lib]

[dependencies]
craydate-macro = {path = "../craydate-macro"}
craydate-sys = {path = "../craydate-sys"}
static_assertions = "1"

[dependencies.euclid]
default-features = false
version = "0.22"
