[package]
authors = ["Adrienne Walker <enne@quisquo.us>", "Dana Jansens <danakj@orodu.net>"]
description = "A safe Rust API for the Playdate hand held gaming system."
documentation = "https://docs.rs/craydate"
edition = "2021"
homepage = "https://github.com/danakj/craydate"
license = "MIT/Apache-2.0"
name = "craydate"
repository = "https://github.com/danakj/craydate"
version = "0.1.7"

[lib]

[dependencies]
craydate-macro = "^0.1.2"
craydate-sys = "^0.1.3"
static_assertions = "1"

[dependencies.euclid]
default-features = false
version = "0.22"
features = ["libm"]
