[package]
name = "YOUR GAME"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
playdate-build = "0.1"

[dependencies]
playdate = "0.1"
game = {package = "YOUR_GAME", path = "../YOUR_GAME/YOUR_GAME"}
# Uses std so they can't be used from the library. They are used from the binaries.
playdate-build = {version = "0.1", optional = true}
game-build = {package = "YOUR_GAME-build", path = "../YOUR_GAME/YOUR_GAME-build", optional = true}

[[bin]]
name = "make_pdx"
required-features = ["binaries"]
[[bin]]
name = "run_simulator"
required-features = ["binaries"]

[features]
default = ["binaries"]
binaries = ["playdate-build", "game-build"]

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"
