[package]
edition = "2021"
name = "simulator-win"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
playdate = {path = "../windup/playdate"}
windup = {path = "../windup"}
# This crate uses `std`, so can not be refered to in the library target,
# but is used by the bins.
playdate-build = {path = "../windup/playdate-build"}

[build-dependencies]
playdate-build = {path = "../windup/playdate-build"}

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"
