[package]
name = "windup-project"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
game = {package = "windup", path = "../windup"}
game-assets = {package = "windup-assets", path = "../windup/windup-assets", optional = true}
craydate = {path = "../windup/craydate"}
craydate-build = {path = "../windup/craydate-build", optional = true}

[build-dependencies]
craydate-build = {path = "../windup/craydate-build"}

[[bin]]
name = "make_pdx"
[[bin]]
name = "run_simulator"

[features]
bins = ["craydate-build", "game-assets"]

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"

