[package]
edition = "2021"
name = "windup-simulator-win"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "staticlib"]

[build-dependencies]
playdate-build = {path = "../windup/playdate-build"}

[dependencies]
playdate = {path = "../windup/playdate"}
game = {package = "windup", path = "../windup"}
playdate-build = {path = "../windup/playdate-build", optional = true}
game-build = {package = "windup-build", path = "../windup/windup-build", optional = true}

[[bin]]
name = "make_pdx"
[[bin]]
name = "run_simulator"

[features]
bins = ["playdate-build", "game-build"]

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"

