[package]
edition = "2021"
name = "windup"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
compiler_builtins = {version = "0.1", features = ["mem"]}
playdate-sys = {path = "../playdate-sys"}
static_assertions = "1"

[build-dependencies]
cc = "1"
