[package]
edition = "2021"
name = "windup"
version = "0.1.0"

[dependencies]
playdate = {path = "playdate"}
static_assertions = "1"
float-ord = "0.3.2"
windup-map = {path = "windup-map"}

[dependencies.euclid]
version = "0.22"
default-features = false
features = ["libm"]

[dependencies.num-traits]
version = "0.2"
default-features = false
features = ["libm"]
