[package]
authors = ["Adrienne Walker <enne@quisquo.us>", "Dana Jansens <danakj@orodu.net>"]
description = "Tools for building a pdx from the compiled game library."
documentation = "https://docs.rs/???"
edition = "2021"
homepage = "https://github.com/danakj/???"
license = "MIT/Apache-2.0"
name = "playdate-build"
repository = "https://github.com/danakj/???"
version = "0.1.0"
