[package]
authors = ["Adrienne Walker <enne@quisquo.us>", "Dana Jansens <danakj@orodu.net>"]
description = "Proc macros for using the playdate crate."
documentation = "https://docs.rs/???"
edition = "2021"
homepage = "https://github.com/danakj/???"
license = "MIT/Apache-2.0"
name = "playdate-macro"
repository = "https://github.com/danakj/???"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = {version = "1", features = ["full"]}
