[package]
authors = ["Adrienne Walker <enne@quisquo.us>", "Dana Jansens <danakj@orodu.net>"]
description = "Bindings around the Playdate C API, generated with bindgen."
documentation = "https://docs.rs/???"
edition = "2021"
homepage = "https://github.com/danakj/???"
license = "MIT/Apache-2.0"
name = "playdate-sys"
repository = "https://github.com/danakj/???"
version = "0.1.0"

[dependencies]
dynpath = {git = "https://github.com/danakj/dynpath", branch = "main"}

[build-dependencies]
bindgen = "0.59"
